# unguard

./: .gitignore  CHANGELOG_SECURITY_FIX.md  CVE-2023-41419-Analysis-Report.md  DEPENDABOT-ALERT-11-FIX-SUMMARY.md  DEPENDABOT_ALERT_229_VERIFICATION.md  DEPENDABOT_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DYNATRACE-CVE-VERIFICATION-SUMMARY.md  DYNATRACE-QUERIES-SUMMARY.md  DYNATRACE_MCP_ANALYSIS.md  DYNATRACE_VERIFICATION_REPORT.md  Dockerfile  EXECUTIVE_SUMMARY.md  INCIDENT_ANALYSIS.md  INCIDENT_RESOLUTION.md  ISSUE_COMMENT_SUMMARY.md  MCP_TESTS_README.md  README.md  README_VERIFICATION.md  SECURITY_ADVISORY.md  SECURITY_FIXES_README.md  SECURITY_FIX_CVE-2025-55182.md  SECURITY_FIX_NOTES.md  SECURITY_REMEDIATION_CVE-2025-55182.md  SECURITY_UPDATE_SUMMARY.md  TASK_COMPLETION_REPORT.md  VERIFICATION_SUMMARY.md  VULNERABILITY_INVESTIGATION_REPORT.md  VULNERABILITY_QUICK_REFERENCE.md  VULNERABILITY_REMEDIATION_PLAN.md  all_dependabot_alerts.json  analyze_npm_vulnerabilities.sh  aws-values.yaml  check_frontend_dynatrace_monitoring.py  commitlint.config.js  dependabot_alerts_array.json  detailed_npm_vulnerabilities.json  detailed_vulnerability_report.sh  dismiss_alerts.sh  dynatrace-mcp-validation-report.md  (+23 more)
.github/: copilot-instructions.md
chart/: Chart.yaml  aws.yaml  values.yaml
docs/: DQL-QUERY-EXAMPLES.md  DQL-SECURITY-QUERIES.md  DYNATRACE-INTEGRATION.md  (+13 more)
src/mcp-client-service/: .gitignore  Dockerfile  INTEGRATION.md  README.md  USAGE.md  demo.py  pyproject.toml  run.py  test_mcp_client.py
src/mcp-client-service/mcp_client/: __init__.py  mcp_client.py  routes.py  run.py
(+161 files in other folders)
